--- a/css/style.css
+++ b/css/style.css
@@ -1,74 +1,19 @@
 * {
     margin: 0;
-    padding: 0;
-}
-body {
-    margin: 0;
-    font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
-    font-size: 1.3rem;
-    color: #926239;
-    line-height: 1.6;
+    padding: 0;    
+    box-sizing: border-box;
 }
 
-#showcase {
-    background-image: url(../img/background-image.jpg);
-    background-size: cover;
-    background-position: center;
-    height: 100vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    padding: 0 20px;
+main {
+    background: #f5f5f5;
+    display: grid;
+    padding: 20px 0;
+    min-height: 100vh;
 }
 
-#showcase h1 {
-    font-size: 2.8rem;
-    line-height: 1.2;
-}
-
-#showcase .button {
-    font-size: 1.3rem;
-    text-decoration: none;
-    color: #926239;
-    border: 1px solid #926239;
-    padding: 10px 20px;
-    border-radius: 10px;
-    margin-top: 20px;
-}
-
-#showcase .button:hover {
-    background: #926239;
-    color: #fff;
-}
-
-#section-a {
-    padding: 20px;
-    background: #926239;
-    color: #fff;
-    text-align: center;
-}
-
-#section-b {
-    padding: 20px;
-    background: #f4f4f4;
-    text-align: center;
-}
-
-#section-c {
-    display: flex;
-}
-
-#section-c > div {
-    padding: 20px;
-}
-
-#section-c div:first-child, #section-c div:last-child {
-    background: #926239;
-    color: #fff;
-}
-
-#section-c div:nth-child(2) {
-    background: #f9f9f9;
+article {
+    width: 50vw;
+    margin: 0 auto;
+    background: #f3f3f3;
+    box-shadow: 0 0 0.5cm rgba(0,0,0,0.5);
 }
